[project]
name = "weekly-radiology-ai-news-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown",
    "python-dateutil",
    "pyyaml>=6.0.3",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
